# brampling3d

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt  asset_build.py  shader.slang  shader_vert.glsl
engine/assets/shaders/: color3d.slang  skybox.slang  soggycube.slang
engine/assets/shaders/mod/: camera.slang
engine/src/: assets.hpp  camera.cpp  camera.hpp  def.hpp  engine.cpp  engine.hpp  imgui.hpp  main.cpp  pch.hpp  sdl3.hpp  shaders.hpp  stb.cpp  vulkan.cpp  vulkan.hpp
engine/src/graphics/: gfxmanager.cpp  gfxmanager.hpp  swapchainmgr.hpp
engine/src/graphics/vulkan/: device.cpp  device.hpp  swapchain.cpp  swapchain.hpp
engine/src/util/: sdl3.cpp  stb.hpp
